--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,44 @@
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
+
+video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: 100vw;
+  z-index: -100;
+  transform: translate(-50%, -50%);
+}
 
 body {
   background: #f5b468;
   color: #fff;
-  width: 100%; }
+  width: 100%;
+}
 
 .section {
   position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+}
 
 #container {
   z-index: 2;
   left: 0;
-  width: 100%; }
+  width: 100%;
+}
 
 .video-background {
   position: fixed;
   bottom: -10vh;
   left: 0;
-  width: 100%; }
+  width: 100%;
+}
 
 .color-overlay {
   position: absolute;
@@ -31,7 +47,8 @@ body {
   background-color: #f5b468;
   width: 70%;
   opacity: 0.65;
-  height: 100%; }
+  height: 100%;
+}
 
 .color-overlay2 {
   position: absolute;
@@ -40,7 +57,29 @@ body {
   background-color: #666;
   width: 30%;
   opacity: 0.4;
-  height: 100%; }
+  height: 100%;
+}
+
+.mobileOverlay-grey {
+  position: fixed;
+  bottom: 0vh;
+  right: 0;
+  background-color: #666;
+  width: 30%;
+  opacity: 0.4;
+  height: 100%;
+  z-index: -1;
+}
+
+.mobileOverlay-orange {
+  position: fixed;
+  bottom: 0vh;
+  left: 0;
+  background-color: #f5b468;
+  width: 70%;
+  opacity: 0.65;
+  height: 100%;
+}
 
 .aboutMe {
   position: fixed;
@@ -48,20 +87,26 @@ body {
   right: 0;
   width: 30%;
   height: 100%;
-  line-height: 2; }
-  .aboutMe a {
-    color: #fff;
-    text-decoration: none; }
-    .aboutMe a:hover {
-      color: #f5b468;
-      transition: all 0.5s ease-out; }
-  .aboutMe .nav-item {
-    display: inline; }
-  .aboutMe .fab {
-    letter-spacing: 2vh; }
+  line-height: 2;
+}
+.aboutMe a {
+  color: #fff;
+  text-decoration: none;
+}
+.aboutMe a:hover {
+  color: #f5b468;
+  transition: all 0.5s ease-out;
+}
+.aboutMe .nav-item {
+  display: inline;
+}
+.aboutMe .fab {
+  letter-spacing: 2vh;
+}
 
 .portrait-container {
-  text-align: center; }
+  text-align: center;
+}
 
 .portrait {
   width: 15rem;
@@ -69,7 +114,8 @@ body {
   border-radius: 50%;
   border: solid 3px #f5b468;
   text-align: center;
-  margin-top: 5vh; }
+  margin-top: 5vh;
+}
 
 #aboutMe-name {
   text-align: center;
@@ -77,7 +123,8 @@ body {
   line-height: 100%;
   padding: 0px;
   margin: 1rem;
-  letter-spacing: 0.05rem; }
+  letter-spacing: 0.05rem;
+}
 
 .aboutMe h1,
 .aboutMe h2,
@@ -85,63 +132,76 @@ body {
   margin: 0;
   font-weight: 400;
   font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
-  text-align: center; }
+  text-align: center;
+}
 
 .aboutMe .icons,
 .aboutMe a {
   padding: 0.5rem;
-  text-align: center; }
+  text-align: center;
+}
 
 .secondary-text {
-  color: #f5b468; }
+  color: #f5b468;
+}
 
 #content {
-  padding-top: 5%; }
+  padding-top: 5%;
+}
 
 .content-container {
-  width: 70%; }
-  .content-container h1 {
-    font-size: 3rem;
-    line-height: 100%;
-    padding: 0px;
-    margin: 1rem;
-    letter-spacing: 0.05rem;
-    font-family: "Segoe UI", Tahoma, Verdana, sans-serif; }
-  .content-container h2 {
-    font-size: 2rem;
-    line-height: 100%;
-    padding: 0px;
-    margin: 1rem;
-    letter-spacing: 0.05rem;
-    font-family: "Segoe UI", Tahoma, Verdana, sans-serif; }
-  .content-container h3 {
-    font-size: 1rem;
-    line-height: 100%;
-    padding: 0px;
-    margin: 1rem;
-    letter-spacing: 0.05rem;
-    font-family: "Segoe UI", Tahoma, Verdana, sans-serif; }
-  .content-container h4 {
-    font-size: 1.2rem;
-    line-height: 200%;
-    margin: 1rem;
-    letter-spacing: 0.15rem;
-    font-family: "Segoe UI", Tahoma, Verdana, sans-serif; }
-  .content-container a {
-    color: #fff;
-    text-decoration: none; }
-    .content-container a:hover {
-      color: #666;
-      transition: all 0.5s ease-out; }
+  width: 70%;
+}
+.content-container h1 {
+  font-size: 3rem;
+  line-height: 100%;
+  padding: 0px;
+  margin: 1rem;
+  letter-spacing: 0.05rem;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+}
+.content-container h2 {
+  font-size: 2rem;
+  line-height: 100%;
+  padding: 0px;
+  margin: 1rem;
+  letter-spacing: 0.05rem;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+}
+.content-container h3 {
+  font-size: 1rem;
+  line-height: 100%;
+  padding: 0px;
+  margin: 1rem;
+  letter-spacing: 0.05rem;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+}
+.content-container h4 {
+  font-size: 1.2rem;
+  line-height: 200%;
+  margin: 1rem;
+  letter-spacing: 0.15rem;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+}
+.content-container a {
+  color: #fff;
+  text-decoration: none;
+}
+.content-container a:hover {
+  color: #666;
+  transition: all 0.5s ease-out;
+}
 
 .introduction {
   text-align: center;
   height: 65vh;
-  line-height: 30vh; }
+  line-height: 30vh;
+}
 
 .projects-main {
   width: 90%;
-  padding-top: 25vh; }
+  padding-top: 25vh;
+}
 
 .projects-main,
 .introduction,
@@ -150,46 +210,67 @@ body {
   text-align: center;
   float: left;
   width: 100%;
-  margin: 0 0 40px; }
-  .projects-main img,
-  .introduction img,
-  .about img,
-  .reach-me img {
-    background-color: #666;
-    opacity: 0.75;
-    width: 225px;
-    height: 180px;
-    margin: 5px; }
-    .projects-main img:hover,
-    .introduction img:hover,
-    .about img:hover,
-    .reach-me img:hover {
-      background-color: #666;
-      opacity: 1;
-      border: solid white 5px;
-      transition: all 0.5s ease-out; }
-  .projects-main .content-header,
-  .introduction .content-header,
-  .about .content-header,
-  .reach-me .content-header {
-    padding-top: 20vh; }
+  margin: 0 0 40px;
+}
+.projects-main img,
+.introduction img,
+.about img,
+.reach-me img {
+  background-color: #666;
+  opacity: 0.75;
+  width: 225px;
+  height: 180px;
+  margin: 5px;
+}
+.projects-main img:hover,
+.introduction img:hover,
+.about img:hover,
+.reach-me img:hover {
+  background-color: #666;
+  opacity: 1;
+  border: solid white 5px;
+  transition: all 0.5s ease-out;
+}
+.projects-main .content-header,
+.introduction .content-header,
+.about .content-header,
+.reach-me .content-header {
+  padding-top: 20vh;
+}
 
 .project {
   display: inline;
   float: left;
-  padding: 1%; }
+  padding: 1%;
+}
 
 .main-section p {
   display: block;
   margin-block-start: 1em;
-  margin-block-end: 1em; }
+  margin-block-end: 1em;
+}
 
 .content-text {
   width: 85%;
   text-align: center;
-  padding-left: 10%; }
+  padding-left: 10%;
+}
 
 @media screen and (max-width: 1000px) {
+  video {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    z-index: -100;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
   .aboutMe,
   #content {
     position: relative;
@@ -197,11 +278,14 @@ body {
     text-align: center;
     align-content: center;
     width: 100%;
-    z-index: 2; }
+    z-index: 2;
+  }
   .project {
-    padding-left: 20%; }
+    padding-left: 20%;
+  }
   #hello {
-    padding-top: 10vh; }
+    padding-top: 10vh;
+  }
   .mobileOverlay-grey {
     top: 0;
     position: absolute;
@@ -210,7 +294,8 @@ body {
     opacity: 0.4;
     height: 100%;
     z-index: 1;
-    float: left block; }
+    float: left block;
+  }
   .mobileOverlay-orange {
     position: absolute;
     background-color: #f5b468;
@@ -218,14 +303,20 @@ body {
     opacity: 0.4;
     height: 310rem;
     z-index: 1;
-    float: left block; }
+    float: left block;
+  }
   .color-overlay2 {
-    height: 0; }
+    height: 0;
+  }
   .color-overlay {
-    height: 0; }
+    height: 0;
+  }
   .content-text {
     padding-left: 0;
     margin: 0;
-    width: 90%; }
+    width: 90%;
+  }
   iframe {
-    height: 25vh; } }
+    height: 25vh;
+  }
+}
